# worldtensor-pipeline

./: .gitignore  LICENSE  README.md  pyproject.toml
config/: accessibility.yml  agriculture.yml  cams.yml  chlorophyll.yml  climate_extremes.yml  dist2coast.yml  edgar.yml  era5.yml  esa_cci_snow.yml  etopo2022.yml  fertilizer.yml  fldas_vegclass.yml  glaciers.yml  gldas_soiltex.yml  gmted2010.yml  gpw.yml  grace_fo.yml  groundwater.yml  hydrorivers.yml  kummu_candidates.yml  land_heatwaves.yml  livestock.yml  luh3.yml  marine_heatwaves.yml  mcd64a1.yml  mod13c2.yml  ntl.yml  odiac.yml  permafrost.yml  point_datasets.yml  powerplants.yml  secrets.yml.example  sectgdp.yml  settlement_candidates.yml  soilgrids.yml  transport_connectivity.yml  variables.yml  vodca.yml  wetlands_wad2m.yml
examples/torch/: 01_global_tensor.py  02_patch_dataloader.py  USAGE.txt  worldtensor_torch.py
src/: data_layout.py  grid.py  harmonize_data.py  utils.py  year_policy.py
src/download/: agriculture.py  cams.py  chlorophyll.py  climate_extremes.py  dist2coast.py  edgar.py  era5.py  esa_cci_snow.py  etopo2022.py  fertilizer.py  fldas_vegclass.py  glaciers.py  gldas_soiltex.py  gmted2010.py  gpw.py  hydrology.py  hydrorivers.py  land_heatwaves.py  livestock.py  luh3.py  marine_heatwaves.py  mcd64a1.py  mod13c2.py  ntl.py  odiac.py  permafrost.py  point_datasets.py  powerplants.py  sectgdp.py  soilgrids.py  wad2m.py
src/pipelines/: accessibility.py  agriculture.py  cams.py  chlorophyll.py  climate_extremes.py  dist2coast.py  edgar.py  era5.py  esa_cci_snow.py  esv.py  etopo2022.py  gpw.py  (+28 more)
(+21 files in other folders)
